check_output.txt
    Blocking waiting for file lock on build directory
warning: unused import: `std::sync::Arc`
 --> astraweave-fluids\src\renderer.rs:1:5
  |
1 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused variable: `shader`
  --> astraweave-fluids\src\sdf.rs:22:13
   |
22 |         let shader = device.create_shader_module(wgpu::ShaderModuleDescriptor {
   |             ^^^^^^ help: if this is intentional, prefix it with an underscore: `_shader`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `config_buffer`
  --> astraweave-fluids\src\sdf.rs:27:13
   |
27 |         let config_buffer = device.create_buffer_init(&wgpu::util::BufferInitDescriptor {
   |             ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_config_buffer`

warning: unused variable: `jfa_params_buffer`
  --> astraweave-fluids\src\sdf.rs:33:13
   |
33 |         let jfa_params_buffer = device.create_buffer(&wgpu::BufferDescriptor {
   |             ^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_jfa_params_buffer`

warning: unused variable: `texture_a`
  --> astraweave-fluids\src\sdf.rs:55:13
   |
55 |         let texture_a = device.create_texture(&texture_desc);
   |             ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_texture_a`

warning: unused variable: `texture_b`
  --> astraweave-fluids\src\sdf.rs:56:13
   |
56 |         let texture_b = device.create_texture(&texture_desc);
   |             ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_texture_b`

warning: multiple fields are never read
  --> astraweave-fluids\src\sdf.rs:4:5
   |
3  | pub struct SdfSystem {
   |            --------- fields in this struct
4  |     init_pipeline: wgpu::ComputePipeline,
   |     ^^^^^^^^^^^^^
5  |     step_pipeline: wgpu::ComputePipeline,
   |     ^^^^^^^^^^^^^
6  |     finalize_pipeline: wgpu::ComputePipeline,
   |     ^^^^^^^^^^^^^^^^^
7  |
8  |     config_buffer: wgpu::Buffer,
   |     ^^^^^^^^^^^^^
9  |     jfa_params_buffer: wgpu::Buffer,
   |     ^^^^^^^^^^^^^^^^^
...
14 |     bind_group_a: wgpu::BindGroup,
   |     ^^^^^^^^^^^^
15 |     bind_group_b: wgpu::BindGroup,
   |     ^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: `astraweave-fluids` (lib) generated 7 warnings (run `cargo fix --lib -p astraweave-fluids` to apply 1 suggestion)
    Checking fluids_demo v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\examples\fluids_demo)
error[E0425]: cannot find value `_physics` in this scope
  --> examples\fluids_demo\src\scenarios\laboratory.rs:62:22
   |
62 |         let box_id = _physics.add_dynamic_box(
   |                      ^^^^^^^^ not found in this scope

error[E0425]: cannot find value `_physics` in this scope
  --> examples\fluids_demo\src\scenarios\laboratory.rs:68:9
   |
68 |         _physics.add_buoyancy(box_id, 8.0, 5.0); // Floats well (volume > mass/density ratio)
   |         ^^^^^^^^ not found in this scope

error[E0425]: cannot find value `_physics` in this scope
  --> examples\fluids_demo\src\scenarios\laboratory.rs:70:25
   |
70 |         let sphere_id = _physics.add_dynamic_box(
   |                         ^^^^^^^^ not found in this scope

error[E0425]: cannot find value `_physics` in this scope
  --> examples\fluids_demo\src\scenarios\laboratory.rs:77:9
   |
77 |         _physics.add_buoyancy(sphere_id, 0.4, 2.0); // Sinks (volume < mass/density ratio)
   |         ^^^^^^^^ not found in this scope

warning: unused import: `Mat4`
 --> examples\fluids_demo\src\scenarios\laboratory.rs:5:12
  |
5 | use glam::{Mat4, Vec3};
  |            ^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `Mat4`
 --> examples\fluids_demo\src\scenarios\ocean.rs:6:12
  |
6 | use glam::{Mat4, Vec3};
  |            ^^^^

error[E0599]: no method named `current_mut` found for struct `ScenarioManager` in the current scope
   --> examples\fluids_demo\src\main.rs:325:55
    |
325 |         if let Some(scenario) = self.scenario_manager.current_mut() {
    |                                                       ^^^^^^^^^^^
    |
   ::: examples\fluids_demo\src\scenarios\mod.rs:41:1
    |
41  | pub struct ScenarioManager {
    | -------------------------- method `current_mut` not found for this struct
    |
help: there is a method `current` with a similar name
    |
325 -         if let Some(scenario) = self.scenario_manager.current_mut() {
325 +         if let Some(scenario) = self.scenario_manager.current() {
    |

Some errors have detailed explanations: E0425, E0599.
For more information about an error, try `rustc --explain E0425`.
warning: `fluids_demo` (bin "fluids_demo") generated 2 warnings
error: could not compile `fluids_demo` (bin "fluids_demo") due to 5 previous errors; 2 warnings emitted
